Updated the box-sizing property on all elements to avoid breaking content when adding padding Removed the fixed height of the title in the Sidebar Set the font-size of the content to arc-font-size-x-small (12px) Removed the color attribute from the main containebr within the ArcMenuItem Updated the gap-size in the ArcContainer Created a test file for the ArcMenuItem

--- a/src/themes/index.css
+++ b/src/themes/index.css
@@ -184,3 +184,7 @@ body {
   letter-spacing: var(--arc-letter-spacing-normal);
   line-height: var(--arc-line-height-normal);
 }
+
+* {
+  box-sizing: border-box;
+}
